examples/errors/too-few-arguments.spcasm
org 0

macro my_macro(one)
endmacro

%my_macro()
